# MedicalStore

./: .gitignore  DBMS_SHD.sql  LICENSE  TEXT.txt  flaskapp.py  goorm.manifest  pyproject.toml  req.txt  requirements.txt
controller/: checkout.py  utilities.py
templates/: cart.html  checkout.html  favourite.html  home.html  index.html  orderhistory.html  product.html  search.html  single-product.html  supplier.html  supproduct.html  supsearch.html
venvp/: pyvenv.cfg
venvt/: pyvenv.cfg
