[project]
name = "medicalstore"
version = "0.1.0"
description = "This is a Online Medical Store Web APP"
readme = "README.md"
requires-python = ">=3.9"


dependencies = [
    "cffi",
    "colorama",
    "cycler",
    "dnspython",
    "flask-bcrypt",
    "future",
    "gunicorn",
    "mysql-connector-python",
    "protobuf",
    "pyparsing",
    "python-dateutil",
    "simple-pid",
]
